[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kevinbotlib-dashboard"
dynamic = ["version"]
description = 'Simple dashboard for KevinbotLib communication'
readme = "README.md"
requires-python = ">=3.10"
license = "LGPL-3.0-or-later"
keywords = []
authors = [
  { name = "meowmeowahr", email = "meowmeowahr@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pyside6~=6.8.2.1",
]

[project.urls]
Documentation = "https://github.com/meowmeowahr/kevinbotlib-dashboard#readme"
Issues = "https://github.com/meowmeowahr/kevinbotlib-dashboard/issues"
Source = "https://github.com/meowmeowahr/kevinbotlib-dashboard"

[tool.hatch.version]
path = "src/kevinbotlib_dashboard/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]

[tool.hatch.envs.default]
installer = "uv"

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/kevinbotlib_dashboard tests}"

[tool.coverage.run]
source_pkgs = ["kevinbotlib_dashboard", "tests"]
branch = true
parallel = true
omit = [
  "src/kevinbotlib_dashboard/__about__.py",
]

[project.gui-scripts]
kevinbotlib_dashboard = "kevinbotlib_dashboard.app:run"

[tool.coverage.paths]
kevinbotlib_dashboard = ["src/kevinbotlib_dashboard", "*/kevinbotlib-dashboard/src/kevinbotlib_dashboard"]
tests = ["tests", "*/kevinbotlib-dashboard/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
